crates/tui/src/view/snapshots/tui__view__working_line__tests__group_line_spinner_frame_0.snap
---
source: crates/tui/src/view/working_line_tests.rs
assertion_line: 78
expression: screen(&app)
---




                                                       ▄▄▄▄▄
                                                        go ▐
                                                       ▀▀▀▀▀
                                                       00:00
⠋ Read 1 file · read a.rs
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
