crates/tui/src/view/snapshots/tui__view__working_line__tests__handoff_band_writing_spinner.snap
---
source: crates/tui/src/view/working_line_tests.rs
expression: screen(&app)
---




                                                      ▄▄▄▄▄
                                                       go ▐
                                                      ▀▀▀▀▀
                                                      00:00
⇄ Handoff · automatic at 400.0k · ⠋ writing the note…
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
>
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
