crates/tui/src/view/snapshots/tui__view__working_line__tests__working_line_narrow_above_the_delegates_rows.snap
---
source: crates/tui/src/view/working_line_tests.rs
expression: shown
---
work











                                                                          ▄▄▄▄▄
                                                                           go ▐
                                                                          ▀▀▀▀▀
                                                                          17:02
Working 11m 14s · esc to interrupt
⠋ WORKING  test/model
  build
⠋ WORKING  test/model
  build
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ >
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
