crates/tui/src/view/snapshots/tui__view__working_line__tests__working_line_reduced_has_no_glimmer.snap
---
source: crates/tui/src/view/working_line_tests.rs
expression: shown
---
















                                                                          ▄▄▄▄▄
                                                                           go ▐
                                                                          ▀▀▀▀▀
                                                                          17:02
  ● Working 11m 14s · Esc to interrupt
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ › █
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
