crates/tui/src/view/snapshots/tui__view__working_line__tests__working_line_shed_at_20_columns.snap
---
source: crates/tui/src/view/working_line_tests.rs
expression: text(&buf)
---
  ⠋ Working 11m 14s
